--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/styles.css" />
-    <title>Work Day Scheduler</title>
+    <title>To Do</title>
   </head>
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day.</p>
+      <h1 class="display-3">To Do Today</h1>
+      <p class="lead">YOU CAN DO IT!</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
